--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <h1>Intro</h1>
-    <p>papugos</p>
+    <p>dvi papugos</p>
     <img src="./img/papugos.jpg" alt="Papugos">
     <p>background image</p>
     <div class="bg-img"></div>
